--- a/book/yesod-typeclass.asciidoc
+++ b/book/yesod-typeclass.asciidoc
@@ -1,8 +1,9 @@
 == Yesod Typeclass
 
 Every one of our Yesod applications requires an instance of the +Yesod+
-typeclass. So far, we've only seen +defaultLayout+. In this chapter, we'll
-explore the meaning of many of the methods of the +Yesod+ typeclass.
+typeclass. So far, we've just relied on default implementations of these
+methods. In this chapter, we'll explore the meaning of many of the methods of
+the +Yesod+ typeclass.
 
 The +Yesod+ typeclass gives us a central place for defining settings for our
 application. Everything has a default definition which is often the
@@ -87,10 +88,11 @@ could for example provide a different domain name depending on how the user
 requested the site in the first place.
 
 The scaffolded site uses +ApprootMaster+ by default, and pulls your approot
-from a config file on launch. Additionally, it load different settings for
-developing, testing, staging, and production builds, so you can easily test on
-one domain- like localhost- and serve from a different domain. You can modify
-these values from the config file.
+from either the +APPROOT+ environment variable or a config file on launch.
+Additionally, it load different settings for developing, testing, staging, and
+production builds, so you can easily test on one domain- like localhost- and
+serve from a different domain. You can modify these values from the config
+file.
 
 ==== joinPath
 
@@ -402,7 +404,7 @@ site by default.
 
 NOTE: You might be wondering: if this is the recommended approach, why isn't it
 the default? The problem is that it makes a number of assumptions that don't
-universally hold: your application has a static subsite, and the location of
+universally hold, such as the presence of a static subsite and the location of
 your static files.
 
 The scaffolded +addStaticContent+ does a number of intelligent things to help
