All snippets compile with Yesod 1.4

--- a/book/basics.asciidoc
+++ b/book/basics.asciidoc
@@ -13,6 +13,7 @@ World:
 
 [source, haskell]
 ----
+{-# LANGUAGE OverloadedStrings     #-}
 {-# LANGUAGE QuasiQuotes           #-}
 {-# LANGUAGE TemplateHaskell       #-}
 {-# LANGUAGE TypeFamilies          #-}
