--- a/book/case-study-sphinx.asciidoc
+++ b/book/case-study-sphinx.asciidoc
@@ -520,6 +520,7 @@ getXmlpipeR =
 {-# LANGUAGE QuasiQuotes                #-}
 {-# LANGUAGE TemplateHaskell            #-}
 {-# LANGUAGE TypeFamilies               #-}
+{-# LANGUAGE ViewPatterns               #-}
 import           Control.Applicative                     ((<$>), (<*>))
 import           Control.Monad                           (forM)
 import           Control.Monad.Logger                    (runStdoutLoggingT)
