--- a/book/authentication-and-authorization.asciidoc
+++ b/book/authentication-and-authorization.asciidoc
@@ -287,7 +287,7 @@ User
     deriving Typeable
 |]
 
-data App = App Connection
+data App = App SqlBackend
 
 mkYesod "App" [parseRoutes|
 / HomeR GET
@@ -325,6 +325,8 @@ instance YesodAuth App where
                 Right userid -> userid -- existing user
 
     authHttpManager = error "Email doesn't need an HTTP manager"
+
+instance YesodAuthPersist App
 
 -- Here's all of the email-specific code
 instance YesodAuthEmail App where
