--- a/book/routing-and-handlers.asciidoc
+++ b/book/routing-and-handlers.asciidoc
@@ -375,6 +375,7 @@ For example:
 {-# LANGUAGE QuasiQuotes       #-}
 {-# LANGUAGE TemplateHaskell   #-}
 {-# LANGUAGE TypeFamilies      #-}
+{-# LANGUAGE ViewPatterns      #-}
 import           Data.Text (Text)
 import qualified Data.Text as T
 import           Yesod
