Sphinx version upgrade

--- a/book/case-study-sphinx.asciidoc
+++ b/book/case-study-sphinx.asciidoc
@@ -268,7 +268,7 @@ Let's first look at +getResults+:
 ----
 getResults :: Text -> Handler [Result]
 getResults qstring = do
-    sphinxRes' <- liftIO $ S.query config "searcher" $ T.unpack qstring
+    sphinxRes' <- liftIO $ S.query config "searcher" qstring
     case sphinxRes' of
         ST.Ok sphinxRes -> do
             let docids = map (toSqlKey . ST.documentId) $ ST.matches sphinxRes
@@ -309,12 +309,12 @@ getResult :: DocId -> Doc -> Text -> IO Result
 getResult docid doc qstring = do
     excerpt' <- S.buildExcerpts
         excerptConfig
-        [T.unpack $ escape $ docContent doc]
+        [escape $ docContent doc]
         "searcher"
-        (T.unpack qstring)
+        qstring
     let excerpt =
             case excerpt' of
-                ST.Ok bss -> preEscapedToHtml $ decodeUtf8 $ mconcat bss
+                ST.Ok texts -> preEscapedToHtml $ mconcat texts
                 _ -> ""
     return Result
         { resultId = docid
@@ -640,12 +640,12 @@ getResult :: DocId -> Doc -> Text -> IO Result
 getResult docid doc qstring = do
     excerpt' <- S.buildExcerpts
         excerptConfig
-        [T.unpack $ escape $ docContent doc]
+        [escape $ docContent doc]
         "searcher"
-        (T.unpack qstring)
+        qstring
     let excerpt =
             case excerpt' of
-                ST.Ok bss -> preEscapedToHtml $ decodeUtf8 $ mconcat bss
+                ST.Ok texts -> preEscapedToHtml $ mconcat texts
                 _ -> ""
     return Result
         { resultId = docid
@@ -666,7 +666,7 @@ escape =
 
 getResults :: Text -> Handler [Result]
 getResults qstring = do
-    sphinxRes' <- liftIO $ S.query config "searcher" $ T.unpack qstring
+    sphinxRes' <- liftIO $ S.query config "searcher" qstring
     case sphinxRes' of
         ST.Ok sphinxRes -> do
             let docids = map (toSqlKey . ST.documentId) $ ST.matches sphinxRes
