--- a/book/wiki-chat-example.asciidoc
+++ b/book/wiki-chat-example.asciidoc
@@ -17,10 +17,21 @@ participants of a chat. This ends up looking like:
 [source, haskell]
 ----
 -- @Chat/Data.hs
+{-# LANGUAGE FlexibleContexts      #-}
+{-# LANGUAGE FlexibleInstances     #-}
+{-# LANGUAGE OverloadedStrings     #-}
+{-# LANGUAGE QuasiQuotes           #-}
+{-# LANGUAGE RankNTypes            #-}
+{-# LANGUAGE TemplateHaskell       #-}
+{-# LANGUAGE TypeFamilies          #-}
 module Chat.Data where
 
-import           Control.Concurrent.Chan (Chan)
-import           Network.Wai.EventSource (ServerEvent)
+import           Blaze.ByteString.Builder.Char.Utf8  (fromText)
+import           Control.Concurrent.Chan
+import           Data.Monoid                         ((<>))
+import           Data.Text                           (Text)
+import           Network.Wai.EventSource
+import           Network.Wai.EventSource.EventStream
 import           Yesod
 
 -- | Our subsite foundation. We keep a channel of events that all connections
@@ -148,9 +159,7 @@ getReceiveR :: ChatHandler ()
 getReceiveR = do
     Chat chan0 <- getYesod
     chan <- liftIO $ dupChan chan0
-    req <- waiRequest
-    res <- liftResourceT $ eventSourceAppChan chan req
-    sendWaiResponse res
+    sendWaiApplication $ eventSourceAppChan chan
 ----
 
 We use +dupChan+ so that each new connection receives its own copy of newly
@@ -171,7 +180,20 @@ site. The formula we use is the following:
 
 [source, haskell]
 ----
--- @Chat/Data.hs
+-- @Chat.hs
+{-# LANGUAGE FlexibleContexts      #-}
+{-# LANGUAGE FlexibleInstances     #-}
+{-# LANGUAGE MultiParamTypeClasses #-}
+{-# LANGUAGE OverloadedStrings     #-}
+{-# LANGUAGE QuasiQuotes           #-}
+{-# LANGUAGE RankNTypes            #-}
+{-# LANGUAGE TemplateHaskell       #-}
+{-# LANGUAGE TypeFamilies          #-}
+module Chat where
+
+import           Chat.Data
+import           Yesod
+
 instance YesodChat master => YesodSubDispatch Chat (HandlerT master IO) where
     yesodSubDispatch = $(mkYesodSubDispatch resourcesChat)
 ----
@@ -197,7 +219,7 @@ URLs. Let's start off our widget:
 
 [source, haskell]
 ----
--- @Chat/Data.hs
+-- @Chat.hs
 chatWidget :: YesodChat master
            => (Route Chat -> Route master)
            -> WidgetT master IO ()
@@ -210,7 +232,7 @@ of creating them manually to avoid name collisions.
 
 [source, haskell]
 ----
--- @Chat/Data.hs
+-- @Chat.hs
     chat <- newIdent   -- the containing div
     output <- newIdent -- the box containing the messages
     input <- newIdent  -- input field from the user
@@ -222,7 +244,7 @@ function lives in the +Handler+ monad, we need to use +handlerToWidget+:
 
 [source, haskell]
 ----
--- @Chat/Data.hs
+-- @Chat.hs
     ili <- handlerToWidget isLoggedIn  -- check if we're already logged in
 ----
 
@@ -232,7 +254,7 @@ client-side code wrapped in a Widget:
 
 [source, haskell]
 ----
--- @Chat/Data.hs
+-- @Chat.hs
     if ili
         then do
             -- Logged in: show the widget
@@ -294,7 +316,7 @@ chat app.
 
 [source, haskell]
 ----
--- @Chat/Data.hs
+-- @Chat.hs
         else do
             -- User isn't logged in, give a not-logged-in message.
             master <- getYesod
@@ -319,9 +341,30 @@ representation. Each Wiki page is indicated by a list of names, and the contents
 
 [source, haskell]
 ----
+-- @ChatMain.hs
+{-# LANGUAGE MultiParamTypeClasses #-}
+{-# LANGUAGE OverloadedStrings     #-}
+{-# LANGUAGE QuasiQuotes           #-}
+{-# LANGUAGE TemplateHaskell       #-}
+{-# LANGUAGE TypeFamilies          #-}
+module ChatMain where
+
+import           Chat
+import           Chat.Data
+import           Control.Concurrent.Chan (newChan)
+import           Data.IORef
+import           Data.Map                (Map)
+import qualified Data.Map                as Map
+import           Data.Text               (Text)
+import qualified Data.Text.Lazy          as TL
+import           Text.Markdown
+import           Yesod
+import           Yesod.Auth
+import           Yesod.Auth.Dummy
+
 data App = App
     { getChat     :: Chat
-    , wikiContent :: IORef (Map.Map [Text] Text)
+    , wikiContent :: IORef (Map [Text] Text)
     }
 ----
 
@@ -329,6 +372,7 @@ Next we want to set up our routes:
 
 [source, haskell]
 ----
+-- @ChatMain.hs
 mkYesod "App" [parseRoutes|
 /            HomeR GET      -- the homepage
 /wiki/*Texts WikiR GET POST -- note the multipiece for the wiki hierarchy
@@ -348,6 +392,7 @@ function will add in the chat widget on every page.
 
 [source, haskell]
 ----
+-- @ChatMain.hs
 instance Yesod App where
     authRoute _ = Just $ AuthR LoginR -- get a working login link
 
@@ -358,7 +403,7 @@ instance Yesod App where
             widget
             chatWidget ChatR
         mmsg <- getMessage
-        giveUrlRenderer
+        withUrlRenderer
             [hamlet|
                 $doctype 5
                 <html>
@@ -381,6 +426,7 @@ Since we're using the chat subsite, we have to provide an instance of
 
 [source, haskell]
 ----
+-- @ChatMain.hs
 instance YesodChat App where
     getUserName = do
         muid <- maybeAuthId
@@ -399,6 +445,7 @@ are rather bland:
 
 [source, haskell]
 ----
+-- @ChatMain.hs
 -- Fairly standard YesodAuth instance. We'll use the dummy plugin so that you
 -- can create any name you want, and store the login name as the AuthId.
 instance YesodAuth App where
@@ -433,6 +480,7 @@ both handlers:
 
 [source, haskell]
 ----
+-- @ChatMain.hs
 -- A form for getting wiki content
 wikiForm :: Maybe Textarea -> Html -> MForm Handler (FormResult Textarea, Widget)
 wikiForm mtext = renderDivs $ areq textareaField "Page body" mtext
@@ -444,7 +492,7 @@ getWikiR page = do
     icontent <- fmap wikiContent getYesod
 
     -- And read the map from inside the reference
-    content <- liftIO $ I.readIORef icontent
+    content <- liftIO $ readIORef icontent
 
     -- Lookup the contents of the current page, if available
     let mtext = Map.lookup page content
@@ -470,12 +518,12 @@ getWikiR page = do
 postWikiR :: [Text] -> Handler Html
 postWikiR page = do
     icontent <- fmap wikiContent getYesod
-    content <- liftIO $ I.readIORef icontent
+    content <- liftIO $ readIORef icontent
     let mtext = Map.lookup page content
     ((res, form), _) <- runFormPost $ wikiForm $ fmap Textarea mtext
     case res of
         FormSuccess (Textarea t) -> do
-            liftIO $ I.atomicModifyIORef icontent $
+            liftIO $ atomicModifyIORef icontent $
                 \m -> (Map.insert page t m, ())
             setMessage "Page updated"
             redirect $ WikiR page
@@ -498,13 +546,14 @@ those values, we can create an +App+ value and pass it to the +warp+ function.
 
 [source, haskell]
 ----
+-- @ChatMain.hs
 main :: IO ()
 main = do
     -- Create our server event channel
     chan <- newChan
 
     -- Initially have a blank database of wiki pages
-    icontent <- I.newIORef Map.empty
+    icontent <- newIORef Map.empty
 
     -- Run our app
     warpEnv App
