Add missing language pragma

--- a/book/wiki-chat-example.asciidoc
+++ b/book/wiki-chat-example.asciidoc
@@ -347,6 +347,7 @@ representation. Each Wiki page is indicated by a list of names, and the contents
 {-# LANGUAGE QuasiQuotes           #-}
 {-# LANGUAGE TemplateHaskell       #-}
 {-# LANGUAGE TypeFamilies          #-}
+{-# LANGUAGE ViewPatterns          #-}
 module ChatMain where
 
 import           Chat
