Fix name for unique constraint constructor

--- a/book/persistent.asciidoc
+++ b/book/persistent.asciidoc
@@ -644,7 +644,7 @@ We'll go into more details when we see integration with Yesod.
 [source, haskell]
 ----
 personId <- insert $ Person "Michael" "Snoyman" 26
-maybePerson <- getBy $ UniqueName "Michael" "Snoyman"
+maybePerson <- getBy $ PersonName "Michael" "Snoyman"
 case maybePerson of
     Nothing -> liftIO $ putStrLn "Just kidding, not really there"
     Just (Entity personId person) -> liftIO $ print person
@@ -916,7 +916,7 @@ deleteWhere:: Delete based on a set of filters
 ----
 personId <- insert $ Person "Michael" "Snoyman" 26
 delete personId
-deleteBy $ UniqueName "Michael" "Snoyman"
+deleteBy $ PersonName "Michael" "Snoyman"
 deleteWhere [PersonFirstName ==. "Michael"]
 ----
 
@@ -1069,7 +1069,7 @@ Person sql=the-person-table id=numeric_id
     firstName String sql=first_name
     lastName String sql=fldLastName
     age Int "sql=The Age of the Person"
-    UniqueName firstName lastName
+    PersonName firstName lastName
     deriving Show
 |]
 ----
